# SafePass

./: .gitignore  LICENSE  README.md  et previous label or sha1q  pyproject.toml  requirements.txt
safepass/: EncryptedInMemDb.py  EntryDto.py  FernetCrypto.py  SqlStatements.py  SqliteDatabase.py  SymmetricCrypto.py  safepass.py
safepass.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
safepass/db/: safepass.db.enc
safepass/res/: 100k-most-used-passwords-NCSC.txt
src/: EncryptedInMemDb.py  EntryDto.py  Fernet.py  FernetCrypto.py  InMemoryDatabase.py  SqlStatement.py  SqlStatements.py  SqliteDatabase.py  SymmetricCrypto.py  safepass.py  utils.py
src/res/: 100k-most-used-passwords-NCSC.txt
tests/: cli_test.py  crypto_test.py  db_test.py  integration_test.py  test_crypto.py  test_db.py  test_utils.py
tests/db/: bad.db.enc  safepass.db.enc  temp.db.enc  test.db.enc
